--- a/src/ui.html
+++ b/src/ui.html
@@ -1,4 +1,5 @@
-<div id="app" style="
+<div id="app"></div>
+<!-- <div id="app" style="
   display: grid;
   place-items: center;
   height: 100%;
@@ -233,4 +234,4 @@
       parent.postMessage({ pluginMessage: { type: 'auto', eos } }, '*')
     }
   }
-</script>
+</script> -->
